# 2501-Final-Project

./: CMakeLists.txt  Makefile  README.md  readme.txt
assets/img/: water.txt
header/: CMakeLists.txt  chaserenemygameobject.h  coingameobject.h  collectablegameobject.h  enemybulletgameobject.h  enemygameobject.h  file_utils.h  game.h  gameobject.h  gametexture.h  geometry.h  hazardenemygameobject.h  heartgameobject.h  lifespangameobject.h  linearparametricmotion.h  parametricmotion.h  particlesystem.h  playerblastbulletgameobject.h  playerbulletgameobject.h  playergameobject.h  powerupgameobject.h  projectilegameobject.h  shader.h  shooterenemygameobject.h  shootinggameobject.h  spawnergameobject.h  sprite.h  textgameobject.h  texturemanager.h  timer.h
shader/: CMakeLists.txt  particle_fragment_shader.glsl  sprite_fragment_shader.glsl  sprite_vertex_shader.glsl
source/: CMakeLists.txt  game.cpp  main.cpp
source/gameobject/: CMakeLists.txt  coingameobject.cpp  collectablegameobject.cpp  enemybulletgameobject.cpp  enemygameobject.cpp  gameobject.cpp  hazardenemygameobject.cpp  heartgameobject.cpp  lifespangameobject.cpp  playerbulletgameobject.cpp  playergameobject.cpp  powerupgameobject.cpp  projectilegameobject.cpp  shooterenemygameobject.cpp  shootinggameobject.cpp  spawnergameobject.cpp  textgameobject.cpp
source/gameobject/collectable/: CMakeLists.txt  coingameobject.cpp  collectablegameobject.cpp  heartgameobject.cpp  powerupgameobject.cpp
source/gameobject/controllers/: CMakeLists.txt  linearparametricmotion.cpp
source/gameobject/enemy/: CMakeLists.txt  chaserenemygameobject.cpp  enemybulletgameobject.cpp  enemygameobject.cpp  shooterenemygameobject.cpp
source/gameobject/player/: CMakeLists.txt  playerblastbulletgameobject.cpp  playerbulletgameobject.cpp  playergameobject.cpp
source/util/: CMakeLists.txt  file_utils.cpp  gametexture.cpp  particles.cpp  particlesystem.cpp  shader.cpp  sprite.cpp  texturemanager.cpp  timer.cpp
