target_sources(${PROJ_NAME}
	PRIVATE
		gameobject.cpp
		playergameobject.cpp
		playerbulletgameobject.cpp
		projectilegameobject.cpp
		enemygameobject.cpp
		enemybulletgameobject.cpp
		hazardenemygameobject.cpp
		shooterenemygameobject.cpp
		collectablegameobject.cpp
		coingameobject.cpp
		powerupgameobject.cpp
		heartgameobject.cpp
		textgameobject.cpp
		shootinggameobject.cpp
)

add_subdirectory(controllers)
